--- a/app/MyPlantPet/android/settings.gradle
+++ b/app/MyPlantPet/android/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'PetPlant'
+rootProject.name = 'MyPlantPet'
 
 apply from: '../node_modules/react-native-unimodules/gradle.groovy'
 includeUnimodulesProjects()
