--- a/app/MyPlantPet/package.json
+++ b/app/MyPlantPet/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@jaidis/react-native-ibeacon-simulator": "^2.0.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@ui-kitten/components": "^5.1.1",
