--- a/app/MyPlantPet/android/app/src/main/AndroidManifest.xml
+++ b/app/MyPlantPet/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="pet.myplant.MyPlantPet">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="pet.myplant.myplantpet">
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
@@ -19,7 +19,7 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="pet.myplant.MyPlantPet"/>
+        <data android:scheme="pet.myplant.myplantpet"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity"/>
