--- a/app/MyPlantPet/package.json
+++ b/app/MyPlantPet/package.json
@@ -14,9 +14,12 @@
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
     "expo": "~42.0.1",
+    "expo-auth-session": "~3.3.1",
+    "expo-random": "~11.2.0",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
+    "jwt-decode": "^3.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
@@ -26,7 +29,8 @@
     "react-native-screens": "~3.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-unimodules": "~0.14.5",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "uuid-by-string": "^3.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -35,6 +39,6 @@
     "typescript": "~4.0.0"
   },
   "private": true,
-  "name": "MyPlantPet",
+  "name": "myplantpet",
   "version": "1.0.0"
 }
