--- a/app/MyPlantPet/package.json
+++ b/app/MyPlantPet/package.json
@@ -7,15 +7,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@eva-design/eva": "^2.1.1",
     "@jaidis/react-native-ibeacon-simulator": "^2.0.0",
     "@react-native-async-storage/async-storage": "react-native-async-storage/async-storage",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "@ui-kitten/components": "^5.1.1",
-    "@ui-kitten/eva-icons": "^5.1.1",
     "expo": "~42.0.1",
     "expo-auth-session": "~3.3.1",
+    "expo-blur": "~9.0.3",
     "expo-random": "~11.2.0",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
@@ -25,11 +23,14 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-svg": "^12.1.1",
     "react-native-unimodules": "~0.14.5",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "uuid-by-string": "^3.0.4"
   },
